2005-02-18    <jeff@mini.nerble.net>

	* gumps/Notebook_gump.cc: Add text automatically from
	"autonotes.txt" when a global flag is set.

2005-02-14	Darke <darkepaw@users.sf.net>
	* hash_utils.h: Hugely complex gcc4.0pre fixes.

2005-01-23    <jeff@mini.nerble.net>

	* game.cc (Game): Command-line option --write-xml causes game
	config. to be written to 'patch/exultgame.xml'.
	(Game): If 'patch/exultgame.xml' exists, Exult uses that instead
	of manually adding resources.

2005-01-16    <jeff@mini.nerble.net>

	* shapes/font.cc: Don't skip linefeeds when handling spaces.
	(Needed for notebook, and I hope this doesn't mess up conversations.)

	* gumps/Notebook_gump.cc (Notebook_gump): Working on auto-paging.

2005-01-15  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* forked_player.cc: fixed execlp call (patch #1101126)

2005-01-13    <jeff@mini.nerble.net>

	* gumps/Notebook_gump.cc (Notebook_gump): Online journal support
	(hit 'n' for 'notebook').

2004-12-29  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* exult.cc: don't let avatar move if right clicking on gump to close it
	  (based on patch #1088000)
	* exult.cc: wait for possible dblclick before showing item info when
	  not in map-edit mode (based on patch #1088157)
	* exult.cc: don't accept click/dblclick when mouse moved too far
	  (based on patches #1088144 and #1088230)

2004-12-01    <jeff@mini.nerble.net>

	* mapedit/objedit.cc,etc.:  Added 'rotate' button to obj-edit dialog.

2004-10-16    <jeff@mini.nerble.net>

	* mapedit/bargeedit.cc: EStudio dialog for adding a barge.

2004-10-07    <jeff@mini.nerble.net>

	* objs/contain.cc: Use gump # from 'containers.dat' for given
	container.  (Not really tested yet.)  Support has also been added
	to ExultStudio for setting a shape's associated gump shape.

2004-09-19    <jeff@mini.nerble.net>

	* mapedit/shapeedit.cc, shapes/items.cc, files/msgfile.cc: Support
	more than 1024 shapes in item names by storing messages in